crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_invalid_function_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (\x#58 : int -> x#58) of
  DataMap unused#65 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_66
    (force
      [[[[[[(force (builtin chooseData)) generated_66]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin mapData) (lam x_58 x_58)]])
--- optimized Core
let anf#3 : Data = mapData (\x#1 : int -> x#1) in
9
--- optimized UPLC
(program 1.1.0 [(lam anf_4 (con integer 9)) [(builtin mapData) (lam x_2 x_2)]])
--- isolated pass
--- isolated ANF input
let anf#66 : Data = mapData (\x#58 : int -> x#58) in
case@Data anf#66 of
  DataMap unused#65 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#67 : int -> int = \x#58 : int -> x#58 in
let anf#66 : Data = mapData data_operand#67 in
let unused#65 : int -> int = data_operand#67 in
9
--- isolated cleaned Core
let anf#66 : Data = mapData (\x#58 : int -> x#58) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_66
    [(lam generated_67
      (force
        [[[[[[(force (builtin chooseData)) generated_67]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_66])
    [(builtin mapData) (lam x_58 x_58)]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_66 (con integer 9)) [(builtin mapData) (lam x_58 x_58)]])
--- result
error: NotAConstant(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)), env: Empty })
--- logs
[]
