crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_other_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list data) []) of
  DataMap payload#49 -> (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_50
    (force
      [[[[[[(force (builtin chooseData)) generated_50] (delay (error))]
        (delay (con (list (pair data data)) []))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list data) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list data) []) in
(con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list (pair data data)) []))
    [(builtin mapData) (con (list data) [])]])
--- isolated pass
--- isolated ANF input
let anf#50 : Data = mapData (con (list data) []) in
case@Data anf#50 of
  DataMap payload#49 -> (con (list (pair data data)) [])
--- isolated folded Core
let data_operand#51 : list Data = (con (list data) []) in
let anf#50 : Data = mapData data_operand#51 in
let payload#49 : list (pair Data Data) = data_operand#51 in
(con (list (pair data data)) [])
--- isolated cleaned Core
let anf#50 : Data = mapData (con (list data) []) in
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_50
    [(lam generated_51
      (force
        [[[[[[(force (builtin chooseData)) generated_51] (delay (error))]
          (delay (con (list (pair data data)) []))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_50])
    [(builtin mapData) (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_50 (con (list (pair data data)) []))
    [(builtin mapData) (con (list data) [])]])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Data, [])))
--- logs
[]
