crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_other_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list data) []) of
  DataMap payload#52 -> payload#52
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_53
    (force
      [[[[[[(force (builtin chooseData)) generated_53] (delay (error))]
        (delay [(lam payload_52 payload_52) [(builtin unMapData) generated_53]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list data) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list data) []) in
case@Data anf#2 of
  DataMap payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unMapData) generated_5]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin mapData) (con (list data) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#53 : Data = mapData (con (list data) []) in
case@Data anf#53 of
  DataMap payload#52 -> payload#52
--- isolated folded Core
let data_operand#54 : list Data = (con (list data) []) in
let anf#53 : Data = mapData data_operand#54 in
let payload#52 : list (pair Data Data) = data_operand#54 in
payload#52
--- isolated cleaned Core
let data_operand#54 : list Data = (con (list data) []) in
let anf#53 : Data = mapData data_operand#54 in
data_operand#54
--- isolated UPLC before
(program 1.1.0
  [(lam anf_53
    [(lam generated_54
      (force
        [[[[[[(force (builtin chooseData)) generated_54] (delay (error))]
          (delay [(lam payload_52 payload_52) [(builtin unMapData) generated_54]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_53])
    [(builtin mapData) (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_54
    [(lam anf_53 data_operand_54) [(builtin mapData) data_operand_54]])
    (con (list data) [])])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Data, [])))
--- logs
[]
