crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_other_items_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list data) [(I 42)]) of
  DataMap payload#58 -> payload#58
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_59
    (force
      [[[[[[(force (builtin chooseData)) generated_59] (delay (error))]
        (delay [(lam payload_58 payload_58) [(builtin unMapData) generated_59]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list data) [(I 42)])]])
--- optimized Core
let data_operand#3 : list Data = (con (list data) [(I 42)]) in
let anf#2 : Data = mapData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin mapData) data_operand_1]])
    (con (list data) [(I 42)])])
--- isolated pass
--- isolated ANF input
let anf#59 : Data = mapData (con (list data) [(I 42)]) in
case@Data anf#59 of
  DataMap payload#58 -> payload#58
--- isolated folded Core
let data_operand#60 : list Data = (con (list data) [(I 42)]) in
let anf#59 : Data = mapData data_operand#60 in
let payload#58 : list (pair Data Data) = data_operand#60 in
payload#58
--- isolated cleaned Core
let data_operand#60 : list Data = (con (list data) [(I 42)]) in
let anf#59 : Data = mapData data_operand#60 in
data_operand#60
--- isolated UPLC before
(program 1.1.0
  [(lam anf_59
    [(lam generated_60
      (force
        [[[[[[(force (builtin chooseData)) generated_60] (delay (error))]
          (delay [(lam payload_58 payload_58) [(builtin unMapData) generated_60]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_59])
    [(builtin mapData) (con (list data) [(I 42)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_60
    [(lam anf_59 data_operand_60) [(builtin mapData) data_operand_60]])
    (con (list data) [(I 42)])])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Data, [Data(Integer(42))])))
--- logs
[]
