crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_parameter_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) of
  DataMap payload#23 -> payload#23
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_24
    (force
      [[[[[[(force (builtin chooseData)) generated_24]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_23 payload_23) [(builtin unMapData) generated_24]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    [(builtin mapData)
      (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])]])
--- optimized Core
let data_operand#3 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#2 : Data = mapData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin mapData) data_operand_1]])
    (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])])
--- isolated pass
--- isolated ANF input
let anf#24 : Data = mapData (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
case@Data anf#24 of
  DataMap payload#23 -> payload#23
  _ -> trace "cold" in error
--- isolated folded Core
let data_operand#25 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#24 : Data = mapData data_operand#25 in
let payload#23 : list (pair Data Data) = data_operand#25 in
payload#23
--- isolated cleaned Core
let data_operand#25 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let anf#24 : Data = mapData data_operand#25 in
data_operand#25
--- isolated UPLC before
(program 1.1.0
  [(lam anf_24
    [(lam generated_25
      (force
        [[[[[[(force (builtin chooseData)) generated_25]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay [(lam payload_23 payload_23) [(builtin unMapData) generated_25]])]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
      anf_24])
    [(builtin mapData)
      (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_25
    [(lam anf_24 data_operand_25) [(builtin mapData) data_operand_25]])
    (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])])
--- result
(con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])
--- logs
[]
